 * Deprecated Pagmo.setGenerationNumber for setMaximumIterationNumber
 * Deprecated NLopt.SetSeed for setSeed
 * Deprecated IterativeThresholdExceedance(dimension, threshold) ctor
 * Deprecated Linear|QuadraticLeastSquares(Sample, Function) constructor
 * Deprecated SubsetSampling.setKeepEventSample, getEventInputSample, getEventOutputSample

=== Documentation ===

=== Python module ===

=== Miscellaneous ===
 * Added IterativeThresholdExceedance::getRatio
 * Added FunctionalChaosResult::drawSelectionHistory to plot LARS coefs paths
 * New API in SubsetSampling to get samples at each iteration


== 1.21 release (2023-06-20) == #release-1.21

=== Library ===

==== Major changes ====
 * New GEV estimation services: MLE, profiled likelihood, r-maxima, time-varying, return level

==== New classes ====
 * SmolyakExperiment (openturns.experimental)
 * Physical|StandardSpaceCrossEntropyImportanceSampling, CrossEntropyResult (openturns.experimental)
 * LeastSquaresExpansion, IntegrationExpansion (openturns.experimental)
 * UniformOverMesh (openturns.experimental)
 * GeneralizedExtremeValueValidation (openturns.experimental)
 * Coles (openturns.usecases.coles)
 * Linthurst (openturns.usescases.linthurst)

==== API changes ====
 * Deprecated LinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated NonLinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated GaussianLinearCalibration::getCandidate, use getParameterMean
 * Deprecated NonGaussianLinearCalibration::getCandidate, use getParameterMean
 * Removed SequentialStrategy
 * Removed TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient
 * Removed FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int)
 * Removed FunctionalChaosSobolIndices::summary
 * Removed CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
 * Removed Distribution.getStandardMoment